--- a/package.json
+++ b/package.json
@@ -42,5 +42,8 @@
   "engines": {
     "node": ">= 4"
   },
-  "private": true
+  "private": true,
+  "dependencies": {
+    "ember-cli": "^2.12.1"
+  }
 }
